refactor: 컨벤션에 따른 수정